Tested candidate controller test